raw/FALVIAN KEMAL PASHA MUHAMMAD 6436 245150207111059/2024-11-14-08-33-44.ceg/compilation.txt
NT.java:15: error: cannot find symbol
        double[] input = input();
                         ^
  symbol:   method input()
  location: class NT
NT.java:16: error: cannot find symbol
        tambah(input[1]);
        ^
  symbol:   method tambah(double)
  location: class NT
NT.java:17: error: cannot find symbol
        kurang(input[2]);
        ^
  symbol:   method kurang(double)
  location: class NT
NT.java:18: error: cannot find symbol
        kali(input[3]);
        ^
  symbol:   method kali(double)
  location: class NT
NT.java:19: error: cannot find symbol
        bagi(input[4]);
        ^
  symbol:   method bagi(double)
  location: class NT
NT.java:20: error: cannot find symbol
        output(akhir());
               ^
  symbol:   method akhir()
  location: class NT
6 errors
Not compiled
